--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact</a>
-                            </li>-->
+                            </li>
                         </ul>
 
                         <div class="d-none d-lg-block">
                             <a href="sign-in.html" class="bi-person custom-icon me-3"></a>
 
                             <a href="product-detail.html" class="bi-bag custom-icon"></a>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </nav>
